chore: adding project core

--- a/index.html
+++ b/index.html
@@ -1,15 +1,183 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vinícius Padilha</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Portfolio | Vinícius Padilha">
+  <meta name="description"
+    content="Este é o meu portfolio, aqui você encontra sobre minha experiência profissional e projetos em que participo!">
+  <meta name="keywords"
+    content="Portfolio, Frontend, Desenvolvedor Frontend, HTML, Perfil, Curriculo, Cases, Vinicius Padilha, Vinicius, Padilha, Vini, Portfolio">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="Portuguese">
+  <meta name="author" content="Vinícius Padilha">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://viniciuspadilha.me/">
+  <meta property="og:title" content="Portfolio | Vinícius Padilha">
+  <meta property="og:description"
+    content="Este é o meu portfolio, aqui você encontra sobre minha experiência profissional e projetos em que participo!">
+  <meta property="og:image" content="https://github.com/viniciuspad.png">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary">
+  <meta property="twitter:url" content="https://viniciuspadilha.me/">
+  <meta property="twitter:title" content="Portfolio | Vinícius Padilha">
+  <meta property="twitter:description"
+    content="Este é o meu portfolio, aqui você encontra sobre minha experiência profissional e projetos em que participo!">
+  <meta property="twitter:image" content="https://github.com/viniciuspad.png">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="https://viniciuspadilha.me/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://viniciuspadilha.me/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://viniciuspadilha.me/img/favicon-16x16.png">
+  <link rel="shortcut icon" href="https://viniciuspadilha.me/favicon.ico" />
+
+  <!-- Scripts -->
+  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="./styles/styles.css">
+
+  <title>Portfolio | Vinícius Padilha</title>
 </head>
 
-<body>
-  <h1>Hi there 👋</h1>
+<body x-data="{ 
+      data: {
+        bio: 'Loading...'
+      },
+      getData() {
+        fetch('https://api.github.com/users/viniciuspad')
+            .then((response) => response.json())
+            .then((json) => this.data = json);
+      }
+    }" x-init="getData()">
+
+  <header data-component="header">
+    <h1 class="logo"><img src="https://github.com/viniciuspad.png" alt="Vinícius Padilha" class="logo-image" /></h1>
+
+    <div class="social">
+      <a x-bind:href="'https://github.com/' + data.login" target="_blank">
+        <svg width="20px" height="20px" viewBox="0 0 20 20">
+          <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g fill="#262626">
+              <g id="Path">
+                <path
+                  d="M18.6585672,5.10534275 C17.7643394,3.53477013 16.5513766,2.2913456 15.0193594,1.37478866 C13.4871142,0.458184971 11.8143593,0 9.99990879,0 C8.18568634,0 6.51238411,0.458325218 4.98045815,1.37478866 C3.44830417,2.29129885 2.23538694,3.53477013 1.34115919,5.10534275 C0.447068266,6.67586863 0,8.39089504 0,10.2503752 C0,12.4840328 0.635737186,14.4925949 1.90753079,16.2765758 C3.17918759,18.060697 4.82197991,19.2952392 6.83577093,19.9803429 C7.07018192,20.0249412 7.2437099,19.9935728 7.35653728,19.8870323 C7.46941028,19.7803515 7.52577837,19.6467434 7.52577837,19.486769 C7.52577837,19.4600755 7.52354371,19.2199269 7.51921121,18.7660428 C7.5147419,18.3121587 7.51264406,17.9161964 7.51264406,17.5783429 L7.21315438,17.6314495 C7.0222052,17.6673058 6.78131827,17.6824992 6.49049359,17.6781983 C6.19980572,17.6740376 5.89803578,17.6428094 5.58559421,17.5847474 C5.27301583,17.5271997 4.98228236,17.3937319 4.71316578,17.1846245 C4.44418601,16.9755171 4.25323683,16.7018029 4.14036384,16.3639026 L4.01016085,16.056763 C3.92337406,15.8522837 3.78674073,15.6251313 3.60007844,15.3761472 C3.41341615,15.1269294 3.22465602,14.9579792 3.03370684,14.8690163 L2.94254195,14.8021187 C2.88179575,14.7576606 2.82542766,14.7040397 2.77330086,14.6418171 C2.72121967,14.5795944 2.68222718,14.517325 2.65618658,14.4549621 C2.63010038,14.3925525 2.65171727,14.3413626 2.72126527,14.3012054 C2.79081328,14.2610481 2.91650135,14.2415539 3.09887674,14.2415539 L3.35919151,14.2814306 C3.5328107,14.3170999 3.74756582,14.4236405 4.00373051,14.6017066 C4.25975838,14.7796326 4.47022661,15.0109456 4.6351808,15.2955523 C4.8349318,15.6604734 5.0755907,15.9385353 5.35784159,16.1298781 C5.63986446,16.3212209 5.9242132,16.4167287 6.21061417,16.4167287 C6.49701514,16.4167287 6.74437801,16.3944763 6.95279401,16.3502052 C7.16098197,16.3057003 7.35630926,16.2388028 7.53868465,16.1498866 C7.61680645,15.5534654 7.82950933,15.0952804 8.17661089,14.7750044 C7.68188514,14.7217108 7.23709713,14.6414431 6.84201885,14.5347156 C6.4471686,14.4278478 6.03913843,14.2544098 5.61820197,14.013934 C5.19703748,13.7737854 4.84765566,13.4755748 4.56996529,13.1198165 C4.29222932,12.7638711 4.06429428,12.2965701 3.88647941,11.7183343 C3.70857333,11.1398646 3.61959749,10.4725723 3.61959749,9.71627022 C3.61959749,8.63941165 3.96254897,7.72304171 4.64831511,6.96664615 C4.32707173,6.15705047 4.35739922,5.2494693 4.7393888,4.24399615 C4.99112978,4.16382196 5.36445436,4.22398766 5.85918011,4.42411927 C6.35399707,4.62434437 6.71628518,4.79586571 6.94640927,4.93807555 C7.17653336,5.08023865 7.36091539,5.2007103 7.49982898,5.29841529 C8.30726993,5.06714899 9.14052346,4.95149246 9.99981758,4.95149246 C10.8591117,4.95149246 11.6925476,5.06714899 12.5000342,5.29841529 L12.9948056,4.97823277 C13.3331509,4.76459076 13.7326985,4.5688068 14.1924906,4.39083412 C14.6525564,4.21295495 15.0043553,4.1639622 15.2475225,4.24413639 C15.6379946,5.24965629 15.6727915,6.15719071 15.3514569,6.9667864 C16.0371774,7.72318196 16.3802657,8.63978564 16.3802657,9.71641047 C16.3802657,10.4727125 16.2909706,11.1421086 16.1133382,11.7250193 C15.9354777,12.3080236 15.7055816,12.7748571 15.4235588,13.1265015 C15.1412167,13.4780993 14.7896002,13.7739724 14.3686637,14.0140742 C13.9476361,14.2543631 13.5394691,14.4278011 13.1446188,14.5346688 C12.7495861,14.6415366 12.3047981,14.721851 11.8100724,14.7752382 C12.2612907,15.1755014 12.4869455,15.8073114 12.4869455,16.6703877 L12.4869455,19.4863951 C12.4869455,19.6463694 12.5412157,19.7799308 12.6498475,19.8866583 C12.7583423,19.9931988 12.9296813,20.0245672 13.1640923,19.9799221 C15.1781569,19.294912 16.8209492,18.060323 18.0925604,16.2762018 C19.3640348,14.4922209 20,12.4836588 20,10.2500012 C19.9995439,8.39075479 19.5522477,6.67586863 18.6585672,5.10534275 Z">
+                </path>
+              </g>
+            </g>
+          </g>
+        </svg>
+      </a>
+      <a href="https://www.linkedin.com/in/vinicius-padilha/" target="_blank">
+        <svg width="20px" height="20px" viewBox="0 0 20 20">
+          <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g transform="translate(-64.000000, 0.000000)" fill="#262626" fill-rule="nonzero">
+              <g id="LinkedIn__x28_alt_x29_">
+                <path
+                  d="M82.5231788,0 L65.4777512,0 C64.6615471,0 64,0.641358883 64,1.43295561 L64,18.5664399 C64,19.3580831 64.6617796,20 65.4777512,20 L82.5231788,20 C83.3391969,20 84,19.3576646 84,18.5664399 L84,1.43295561 C84,0.641591377 83.3391969,0 82.5231788,0 Z M70.0634298,16.7413593 L67.0415728,16.7413593 L67.0415728,7.71160472 L70.0634298,7.71160472 L70.0634298,16.7413593 Z M68.5528036,6.47798976 L68.5324833,6.47798976 C67.5191217,6.47798976 66.8622246,5.78497064 66.8622246,4.91734826 C66.8622246,4.03224231 67.538419,3.35800873 68.5718683,3.35800873 C69.6054107,3.35800873 70.2411506,4.03205632 70.2612383,4.91734826 C70.2612383,5.78515663 69.6056432,6.47798976 68.5528036,6.47798976 Z M80.9563347,16.7413593 L77.9354542,16.7413593 L77.9354542,11.910127 C77.9354542,10.696181 77.4977552,9.86785022 76.4052981,9.86785022 C75.5695643,9.86785022 75.0734621,10.4266736 74.8556124,10.9662 C74.7748894,11.1588913 74.7548946,11.4283987 74.7548946,11.6975342 L74.7548946,16.7411734 L71.7345721,16.7411734 C71.7345721,16.7411734 71.7740966,8.5583491 71.7345721,7.71146523 L74.7553596,7.71146523 L74.7553596,8.99162555 C75.1563705,8.37649203 75.8729729,7.4990119 77.477156,7.4990119 C79.4654707,7.4990119 80.9563347,8.78884399 80.9563347,11.5636639 L80.9563347,16.7413593 Z M74.7610117,9.09039077 C74.7758117,9.0661241 74.7964784,9.0369241 74.8170117,9.0085241 L74.8170117,9.09039077 L74.7610117,9.09039077 Z">
+                </path>
+              </g>
+            </g>
+          </g>
+        </svg>
+      </a>
+      <a href="https://instagram.com/viniciuspdha/" target="_blank">
+        <svg width="20px" height="20px" viewBox="0 0 20 20">
+          <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g transform="translate(-126.000000, 0.000000)" fill="#262626" fill-rule="nonzero">
+              <g id="instagram">
+                <path
+                  d="M136,0 C138.715833,-4.0476881e-16 139.056667,0.0116666667 140.124167,0.0608333333 C143.759167,0.2275 145.776667,2.24916667 145.94,5.8775 C145.988333,6.94416667 146,7.28416667 146,10 C146,12.7158333 145.988333,13.0566667 145.939167,14.1233333 C145.775,17.7583333 143.751667,19.7733333 140.123333,19.94 C139.056667,19.9883333 138.715833,20 136,20 C133.284167,20 132.944167,19.9883333 131.876667,19.94 C128.241667,19.7733333 126.226667,17.755 126.06,14.1233333 C126.011667,13.0566667 126,12.7158333 126,10 C126,7.28416667 126.011667,6.94416667 126.060833,5.87666667 C126.2275,2.24166667 128.245833,0.226666667 131.8775,0.06 C132.944167,0.0116666667 133.284167,0 136,0 Z M136,4.865 C133.164167,4.865 130.865,7.16416667 130.865,10 C130.865,12.8358333 133.164167,15.1358333 136,15.1358333 C138.835833,15.1358333 141.135,12.8366667 141.135,10 C141.135,7.16416667 138.835833,4.865 136,4.865 Z M136,13.3333333 C134.159167,13.3333333 132.666667,11.8416667 132.666667,10 C132.666667,8.15916667 134.159167,6.66666667 136,6.66666667 C137.840833,6.66666667 139.333333,8.15916667 139.333333,10 C139.333333,11.8416667 137.840833,13.3333333 136,13.3333333 Z M141.338333,3.4625 C140.675,3.4625 140.1375,4 140.1375,4.6625 C140.1375,5.325 140.675,5.8625 141.338333,5.8625 C142.000833,5.8625 142.5375,5.325 142.5375,4.6625 C142.5375,4 142.000833,3.4625 141.338333,3.4625 Z">
+                </path>
+              </g>
+            </g>
+          </g>
+        </svg>
+      </a>
+    </div>
+  </header>
+
+  <div class="main">
+
+    <section data-component="about">
+      <div class="disclaimer">
+        <p class="disclaimer-description" x-text="data.bio"></p>
+        <p class="disclaimer-contact">
+          <a href="mailto:vinicius.padilha@outlook.com.br?subject=Olá%20Vínicius"
+            target="_top">vinicius.padilha@outlook.com.br</a>
+          <br />
+          <br />
+          <a href="https://api.whatsapp.com/send?phone=5551995779761" target="_blank">+55 51 99577 9761</a>
+          </span>
+      </div>
+    </section>
+
+    <section data-component="wave">
+      <img src="./img/bg-wave.jpeg" alt="wave">
+    </section>
+
+    <section data-component="experience">
+      <div class="content">
+        <div class="dots">
+          <div class="description">
+            <span class="description-date">jan/2015 - dec/2016</span>
+            <h3 class="description-title">Centro Sinodal</h3>
+            <p class="description-text">Computer Technician</p>
+          </div>
+        </div>
+        <div class="dots">
+          <div class="description">
+            <span class="description-date">feb/2016 – jan/2017</span>
+            <h3 class="description-title">RCA Digital</h3>
+            <p class="description-text">Frontend Internship</p>
+          </div>
+        </div>
+        <div class="dots">
+          <div class="description">
+            <span class="description-date">aug/2019 – moment</span>
+            <h3 class="description-title">IFSUL</h3>
+            <p class="description-text">Internet Systems Technologist</p>
+          </div>
+        </div>
+        <div class="dots">
+          <div class="description">
+            <span class="description-date">feb/2017 – feb/2020</span>
+            <h3 class="description-title">RCA Digital</h3>
+            <p class="description-text">Frontend Developer</p>
+          </div>
+        </div>
+        <div class="dots">
+          <div class="description">
+            <span class="description-date">mar/2020 – apr/2021</span>
+            <h3 class="description-title">CWI Software</h3>
+            <p class="description-text">Frontend Developer</p>
+          </div>
+        </div>
+        <div class="dots">
+          <div class="description">
+            <span class="description-date">apr/2021 – moment</span>
+            <h3 class="description-title">L2 Code</h3>
+            <p class="description-text">Sr Frontend Developer</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section data-component="mountain">
+      <img src="./img/bg-mountain.jpeg" alt="mountain">
+    </section>
+
+  </div>
+
+  <footer data-component="footer">
+    <h3 class="copyright" x-text="'©' + new Date().getFullYear() + ' ' + data.blog">loading...</h3>
+  </footer>
+
 </body>
 
 </html>
