fix: replace old website url

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <meta name="author" content="Vinícius Padilha">
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://viniciuspadilha.me/">
+  <meta property="og:url" content="https://viniciuspad.github.io/">
   <meta property="og:title" content="Portfolio | Vinícius Padilha">
   <meta property="og:description"
     content="Este é o meu portfolio, aqui você encontra sobre minha experiência profissional e projetos em que participo!">
   <meta property="og:image" content="https://github.com/viniciuspad.png">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary">
-  <meta property="twitter:url" content="https://viniciuspadilha.me/">
+  <meta property="twitter:url" content="https://viniciuspad.github.io/">
   <meta property="twitter:title" content="Portfolio | Vinícius Padilha">
   <meta property="twitter:description"
     content="Este é o meu portfolio, aqui você encontra sobre minha experiência profissional e projetos em que participo!">
@@ -31,10 +31,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://viniciuspadilha.me/img/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://viniciuspadilha.me/img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://viniciuspadilha.me/img/favicon-16x16.png">
-  <link rel="shortcut icon" href="https://viniciuspadilha.me/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="https://viniciuspad.github.io/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://viniciuspad.github.io/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://viniciuspad.github.io/img/favicon-16x16.png">
+  <link rel="shortcut icon" href="https://viniciuspad.github.io/favicon.ico" />
 
   <!-- Scripts -->
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
