chore: update users

--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
   <meta name="author" content="Vinícius Padilha">
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://viniciuspad.github.io/">
+  <meta property="og:url" content="https://vinicius-padilha.github.io/">
   <meta property="og:title" content="Portfolio | Vinícius Padilha">
   <meta property="og:description"
     content="Este é o meu portfolio, aqui você encontra sobre minha experiência profissional e projetos em que participo!">
-  <meta property="og:image" content="https://github.com/viniciuspad.png">
+  <meta property="og:image" content="https://github.com/vinicius-padilha.png">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary">
-  <meta property="twitter:url" content="https://viniciuspad.github.io/">
+  <meta property="twitter:url" content="https://vinicius-padilha.github.io/">
   <meta property="twitter:title" content="Portfolio | Vinícius Padilha">
   <meta property="twitter:description"
     content="Este é o meu portfolio, aqui você encontra sobre minha experiência profissional e projetos em que participo!">
-  <meta property="twitter:image" content="https://github.com/viniciuspad.png">
+  <meta property="twitter:image" content="https://github.com/vinicius-padilha.png">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://viniciuspad.github.io/img/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://viniciuspad.github.io/img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://viniciuspad.github.io/img/favicon-16x16.png">
-  <link rel="shortcut icon" href="https://viniciuspad.github.io/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="https://vinicius-padilha.github.io/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://vinicius-padilha.github.io/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://vinicius-padilha.github.io/img/favicon-16x16.png">
+  <link rel="shortcut icon" href="https://vinicius-padilha.github.io/favicon.ico" />
 
   <!-- Scripts -->
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -50,14 +50,14 @@
         bio: 'Loading...'
       },
       getData() {
-        fetch('https://api.github.com/users/viniciuspad')
+        fetch('https://api.github.com/users/vinicius-padilha')
             .then((response) => response.json())
             .then((json) => this.data = json);
       }
     }" x-init="getData()">
 
   <header data-component="header">
-    <h1 class="logo"><img src="https://github.com/viniciuspad.png" alt="Vinícius Padilha" class="logo-image" /></h1>
+    <h1 class="logo"><img src="https://github.com/vinicius-padilha.png" alt="Vinícius Padilha" class="logo-image" /></h1>
 
     <div class="social">
       <a x-bind:href="'https://github.com/' + data.login" target="_blank">
@@ -86,7 +86,7 @@
           </g>
         </svg>
       </a>
-      <a href="https://instagram.com/viniciuspdha/" target="_blank">
+      <a href="https://instagram.com/__vinicius-padilhailha/" target="_blank">
         <svg width="20px" height="20px" viewBox="0 0 20 20">
           <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
             <g transform="translate(-126.000000, 0.000000)" fill="#262626" fill-rule="nonzero">
