--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </g>
         </svg>
       </a>
-      <a href="https://instagram.com/__vinicius-padilhailha/" target="_blank">
+      <a href="https://instagram.com/__viniciuspadilha/" target="_blank">
         <svg width="20px" height="20px" viewBox="0 0 20 20">
           <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
             <g transform="translate(-126.000000, 0.000000)" fill="#262626" fill-rule="nonzero">
