--- a/404.html
+++ b/404.html
@@ -15,26 +15,26 @@
   <meta name="author" content="Vinícius Padilha">
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://viniciuspad.github.io/">
+  <meta property="og:url" content="https://vinicius-padilha.github.io/">
   <meta property="og:title" content="Portfolio | Vinícius Padilha">
   <meta property="og:description"
     content="Este é o meu portfolio, aqui você encontra sobre minha experiência profissional e projetos em que participo!">
-  <meta property="og:image" content="https://github.com/viniciuspad.png">
+  <meta property="og:image" content="https://github.com/vinicius-padilha.png">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary">
-  <meta property="twitter:url" content="https://viniciuspad.github.io/">
+  <meta property="twitter:url" content="https://vinicius-padilha.github.io/">
   <meta property="twitter:title" content="Portfolio | Vinícius Padilha">
   <meta property="twitter:description"
     content="Este é o meu portfolio, aqui você encontra sobre minha experiência profissional e projetos em que participo!">
-  <meta property="twitter:image" content="https://github.com/viniciuspad.png">
+  <meta property="twitter:image" content="https://github.com/vinicius-padilha.png">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://viniciuspad.github.io/img/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://viniciuspad.github.io/img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://viniciuspad.github.io/img/favicon-16x16.png">
-  <link rel="shortcut icon" href="https://viniciuspad.github.io/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="https://vinicius-padilha.github.io/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://vinicius-padilha.github.io/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://vinicius-padilha.github.io/img/favicon-16x16.png">
+  <link rel="shortcut icon" href="https://vinicius-padilha.github.io/favicon.ico" />
 
   <!-- Styles -->
   <link rel="stylesheet" href="./styles/styles.css">
