--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     }" x-init="getData()">
 
   <header data-component="header">
-    <h1 class="logo"><img src="https://github.com/vinicius-padilha.png" alt="Vinícius Padilha" class="logo-image" /></h1>
+    <h1 class="logo"><img src="https://github.com/vinicius-padilha.png" alt="Vinícius Padilha" class="logo-image" />
+    </h1>
 
     <div class="social">
       <a x-bind:href="'https://github.com/' + data.login" target="_blank">
@@ -86,7 +87,7 @@
           </g>
         </svg>
       </a>
-      <a href="https://instagram.com/__viniciuspadilha/" target="_blank">
+      <a href="https://instagram.com/viniciuspadilha/" target="_blank">
         <svg width="20px" height="20px" viewBox="0 0 20 20">
           <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
             <g transform="translate(-126.000000, 0.000000)" fill="#262626" fill-rule="nonzero">
