fix: update profile picture

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     }" x-init="getData()">
 
   <header data-component="header">
-    <h1 class="logo"><img src="https://github.com/vinicius-padilha.png" alt="Vinícius Padilha" class="logo-image" />
+    <h1 class="logo"><img src="https://github.com/padilhavinicius.png" alt="Vinícius Padilha" class="logo-image" />
     </h1>
 
     <div class="social">
